objects/gvp__Consumer_Order_Item__c.object
<CustomObject>
    <description>[Unsupported] For uploading or integrating DTC (consumer) orders from an external system such as ShipCompliant, AMS, eWinery</description>
    <fields>
        <fullName>gvp__Consumer_Order__c</fullName>
        <label>Consumer Order</label>
        <referenceTo>gvp__Consumer_Order__c</referenceTo>
        <relationshipLabel>Consumer Order Items</relationshipLabel>
        <relationshipName>Consumer_Order_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>gvp__Ext_Price__c</fullName>
        <formula>gvp__Unit_Price__c *  gvp__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ext Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>gvp__Order_Item_Key__c</fullName>
        <externalId>true</externalId>
        <label>Order Item Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>gvp__Order_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Item</label>
        <referenceTo>gvp__Item__c</referenceTo>
        <relationshipLabel>Consumer Order Items</relationshipLabel>
        <relationshipName>Consumer_Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Product_Key__c</fullName>
        <description>ShipCompliant &quot;Product Key&quot;</description>
        <formula>gvp__Order_Item__r.gvp__Item_Key__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Consumer Order Item</label>
    <nameField>
        <displayFormat>CID-{0000000000}</displayFormat>
        <label>DTC Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consumer Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>